Add a step to adjust video times to UTC to the Makefile

--- a/video-tools/Makefile-gopro
+++ b/video-tools/Makefile-gopro
@@ -13,7 +13,7 @@ stitch-all: $(patsubst %, stitched-%.MP4, $(TO_STITCH))
 stitched-%.MP4: G?0[123456789]%.MP4
 	($(MAKEFILE_PATH)/concat-mp4-files.sh $(sort $^) -o "$@" && rm $^ )
 
-# Step 2: Rename files and fix file timestamps.
+# Step 2: Rename files and set filesystem timestamps.
 #
 # Files are renamed to VID_yyyymmdd_hhmmss-gopro.mp4 format.
 #
@@ -24,12 +24,27 @@ rename-all: $(addsuffix .renamed-phony, $(basename $(wildcard G[HXP]??????.MP4))
 %.renamed-phony : %.MP4
 	(exiftool -api largefilesupport=1 "-createDate>FileModifyDate" "$<" && exiftool -api largefilesupport=1 '-Filename<CreateDate' -d 'VID_%Y%m%d_%H%M%S-gopro.mp4' "$<" )
 
+# Step 3: Set videos time to be in UTC.
+#
+# Now that file names contain (local) time when the videos were recorded, adjust the time in .mp4
+# metadata to be in UTC time zone and conform to .mp4 standards. GoPros unfortunatelly don't have a
+# notion of time zones which makes time in metadata always wrong.
+#
+# IMPORTANT: Make sure you run this step only once and that both the GoPro and your computer have
+# correct (local) time set.
 
-# Step 3: Compress files to save space, using H.264 compression.
+adjust-time-to-utc-all: $(addsuffix .utc-phony, $(basename $(wildcard VID_????????_??????-gopro.mp4)))
+
+%.utc-phony : %.mp4
+	$(MAKEFILE_PATH)/adjust-gopro-time-to-utc.sh "$<"
+
+
+# Step 4: Compress files to save space using H.264 compression.
 #
 # Output files have "-h264" suffix added and the original files are removed. 
 #
-# TODO(bobo): Compression script to be revisited and modified to copy GoPro data streams properly.
+# TODO(bobo): Compression script to be revisited and modified to copy GoPro-specific data streams
+#             properly.
 
 compress-all: $(addsuffix -h264.mp4, $(basename $(wildcard VID_????????_??????-gopro.mp4)) $(basename $(wildcard VID_????????_??????.mp4)))
 
