Added new PXL_* prefix for Pixel videos made with Google Camera on Android 11

--- a/video-tools/Makefile-pixel
+++ b/video-tools/Makefile-pixel
@@ -1,6 +1,6 @@
 # Compress all video files and remove the originals.
 
-all-h264: $(addsuffix -h264.mp4, $(basename $(wildcard ????????_??????A.mp4)) $(basename $(wildcard VID_????????_??????.mp4)) $(basename $(wildcard VID_????????_??????_LS.mp4)) $(basename $(wildcard VID_????????_??????~[1-9].mp4)))
+all-h264: $(addsuffix -h264.mp4, $(basename $(wildcard ????????_??????A.mp4)) $(basename $(wildcard VID_????????_??????.mp4)) $(basename $(wildcard VID_????????_??????_LS.mp4)) $(basename $(wildcard VID_????????_??????~[1-9].mp4)) $(basename $(wildcard PXL_????????_?????????.mp4)))
 
 mkfile_path := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 
